# toc2026

./: .clang-format  .dockerignore  AGENTS.md  CMakeLists.txt  CODE_REVIEW.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  docker_wsl_repair.ps1  fix_unix.py  middleware.py  overwrite_server.py  websocket_bridge.py
area/: commands.are  toc.are
notes/: container_system.md  memory_leak_audit.md  network_refactor_plan.md  scripting_hooks.md
scripts/: player_watcher.py  run_valgrind.sh  web_server.py
src/: act_comm.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  color.c  comm.c  const.c  container.c  db.c  dstring.c  dstring.h  edit.c  fight.c  handler.c  hunt.c  interp.c  interp.h  list.c  list.h  magic.c  magic2.c  maxload.c  maxload.h  merc.h  misc.c  pkill.c  quest.c  save.c  script_event.c  skills.c  special.c  string_safe.c  stubs.c  update.c  wizlist.c
webadmin/: __init__.py  area_parser.py  server.py
wiki/: AREAS.md  HELPS.md  Home.md  INSTALLING-ToC-ON-A-RASPBERRY-PI-UBUNTU-WIN10-BASH-SHELL.md  MOBS-HP-&-DAMAGE.md  MOBS.md  OBJECTS.md  OLD---NEW-VALUES.md  RESETS.md  ROOMS.md  SHOPS.md  SPECIALS.md  SPELLSLOT.md  _Footer.md
